--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,12 @@ spring.datasource.username=sa
 spring.datasource.password=sa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+spring.jpa.hibernate.ddl-auto=create-drop
+
+
 # Show SQL in logs (optional, useful for debugging)
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
-
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #http://localhost:8080/h2-console
